# file-server-rs

./: Cargo.toml  LICENSE.md  README.md  Rocket.toml
src/: config.rs  error.rs  index.rs  indexer.rs  main.rs  statics.rs  tls_server_config.rs  upload.rs  windows.rs
static/: layout.css
templates/: error.html.hbs  main.html.hbs  upload.html.hbs
