[package]
name = "file-server-rs"
version = "0.1.0"
authors = ["Joseph Rafael Ferrer"]
edition = "2021"

[dependencies]
actix-files = "0.6.2"
actix-multipart = "0.6.1"
actix-web = "4.4.0"
clap = { version = "4.4.6", features = [
    "derive",
    "help",
    "suggestions",
    "usage",
] }
futures-util = "0.3.28"
handlebars = { version = "4.4.0", features = ["dir_source"] }
percent-encoding = "2.3.0"
sanitize-filename = "0.5.0"
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["fs"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.51.1", features = [
    "Win32_Foundation",
    "Win32_System_Time",
] }
