[package]
name = "file-server-rs"
version = "0.1.0"
authors = ["Joseph Rafael Ferrer"]
edition = "2021"

[dependencies]
actix-files = "0.6"
actix-multipart = "0.6"
actix-web = { version = "4.4", features = ["rustls-0_21"] }
aho-corasick = "1.1"
clap = { version = "4.4", features = [
    "derive",
    "help",
    "suggestions",
    "usage",
] }
futures-util = "0.3"
handlebars = { version = "4.4", features = ["dir_source"] }
percent-encoding = "2.3"
rcgen = "0.12"
rustls = "0.21"
sanitize-filename = "0.5"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.32", features = ["fs"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
    "Win32_System_Time",
] }

[profile.release]
lto = true